After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704094 - (BadXML) Fix crashes and memory leaks
(BadXML)
Fix crashes and memory leaks
Status: RESOLVED FIXED
Product: GUPnP
Classification: Other
Component: gupnp
0.12.x
Other Linux
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-12 14:05 UTC by Ludovic Ferrandis
Modified: 2013-08-13 09:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix a crash in case of malformed XML (1.29 KB, patch)
2013-07-12 14:05 UTC, Ludovic Ferrandis
committed Details | Review
Fix bad paremeters (1.25 KB, patch)
2013-07-12 14:06 UTC, Ludovic Ferrandis
committed Details | Review
Memory leaks (1.36 KB, patch)
2013-07-12 14:07 UTC, Ludovic Ferrandis
committed Details | Review
Coding convention (2.69 KB, patch)
2013-07-12 14:07 UTC, Ludovic Ferrandis
committed Details | Review
Coding convention (1.53 KB, patch)
2013-07-12 14:07 UTC, Ludovic Ferrandis
committed Details | Review
Variable might be used uninitialiazed (1.31 KB, patch)
2013-08-05 12:42 UTC, Ludovic Ferrandis
committed Details | Review

Description Ludovic Ferrandis 2013-07-12 14:05:54 UTC
Created attachment 249007 [details] [review]
Fix a crash in case of malformed XML

Fix potential crashes in cases of corrupted/malformed XML files, or bad function parameter.

Add also to coding convention (Trailing spaces removed by the IDE)
Comment 1 Ludovic Ferrandis 2013-07-12 14:06:37 UTC
Created attachment 249008 [details] [review]
Fix bad paremeters
Comment 2 Ludovic Ferrandis 2013-07-12 14:07:06 UTC
Created attachment 249009 [details] [review]
Memory leaks
Comment 3 Ludovic Ferrandis 2013-07-12 14:07:33 UTC
Created attachment 249010 [details] [review]
Coding convention
Comment 4 Ludovic Ferrandis 2013-07-12 14:07:56 UTC
Created attachment 249011 [details] [review]
Coding convention
Comment 5 Jens Georg 2013-07-12 14:38:19 UTC
Review of attachment 249007 [details] [review]:

Look good

::: libgupnp/gupnp-device-info.c
@@ +753,2 @@
                         if (requested_mime_type) {
+				if (icon->mime_type)

Or we consistently use g_strcmp0... Interesting catch, though. strcmp seems to be "NULL-safe" in recent glibc's.
Comment 6 Jens Georg 2013-07-12 14:38:19 UTC
Review of attachment 249007 [details] [review]:

Look good

::: libgupnp/gupnp-device-info.c
@@ +753,2 @@
                         if (requested_mime_type) {
+				if (icon->mime_type)

Or we consistently use g_strcmp0... Interesting catch, though. strcmp seems to be "NULL-safe" in recent glibc's.
Comment 7 Jens Georg 2013-07-12 14:38:20 UTC
Review of attachment 249007 [details] [review]:

Look good

::: libgupnp/gupnp-device-info.c
@@ +753,2 @@
                         if (requested_mime_type) {
+				if (icon->mime_type)

Or we consistently use g_strcmp0... Interesting catch, though. strcmp seems to be "NULL-safe" in recent glibc's.
Comment 8 Jens Georg 2013-07-12 14:38:25 UTC
Review of attachment 249007 [details] [review]:

Look good

::: libgupnp/gupnp-device-info.c
@@ +753,2 @@
                         if (requested_mime_type) {
+				if (icon->mime_type)

Or we consistently use g_strcmp0... Interesting catch, though. strcmp seems to be "NULL-safe" in recent glibc's.
Comment 9 Jens Georg 2013-07-30 07:26:01 UTC
I squashed to code style fixes into one commit and made a minor code style
correction to attachment 249009 [details] [review]
Comment 10 Ludovic Ferrandis 2013-08-05 12:42:36 UTC
Created attachment 250867 [details] [review]
Variable might be used uninitialiazed

Sorry, I have introduced this bug in my fixes.