Fix a potential crash in case of a corrupted or malformed XML file.

In icon_parse() function, icon->mime_type could be initialized to NULL.
The call to strcmp could potentially crash.

https://bugzilla.gnome.org/show_bug.cgi?id=704094